# react-native-reanimated

./: createNPMPackage.sh  package.json  v8-fixed.patch
Example/: package.json
android/: CMakeLists.txt  build.gradle
android-npm/: build.gradle  react-native-reanimated-67-jsc.aar
android/src/main/cpp/: NativeProxy.cpp
android/src/main/java/com/swmansion/reanimated/: NativeProxy.java
android/src/main/java/com/swmansion/reanimated/layoutReanimation/: AnimationsManager.java
src/reanimated2/: commonTypes.ts
